# helpy

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE  README.md  devbox.json  pyproject.toml  rust-toolchain
basic/: Cargo.toml  pyproject.toml
basic/python/basic/: __init__.py
basic/python/tests/: test_all.py
basic/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs
crates/my_logging/: Cargo.toml
crates/my_logging/src/: lib.rs
tests/robot/: fail.robot  pass.robot
