[workspace]
resolver = "2"
members = [
  "packages/rust-server",
  "crates/common",
  "crates/my_logging"
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.219" }
serde_json = { version =  "1.0.140" }
snafu = { version = "0.8.5" }
pyo3 = { version = "0.23.5" }
pyo3-log = { version = "0.12.1" }
pythonize = { version = "0.23.0" }
log = { version = "0.4.26" }
opentelemetry = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0" }
opentelemetry-jaeger = { version = "0.22.0" }
opentelemetry-jaeger-propagator = { version = "0.28.0" }
tracing = { version = "0.1.41" }
opentelemetry-otlp = { version = "0.28.0" }
tracing-subscriber = { version = "0.3.19" }
tokio = { version = "1.44.1" }

# local crates
common = { path = "crates/common" }
my_logging = { path = "crates/my_logging" }
rust-server = { path = "packages/rust-server" }
